src/objects/Stable__c.object
<CustomObject>
    <fields>
        <fullName>AppCountTTL_NEW__c</fullName>
        <label>Number of Apps on Stable</label>
        <summaryForeignKey>Stable_Application__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application_Cost_Current__c</fullName>
        <label>Application Cost Current</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Cost_High__c</fullName>
        <label>Application Cost High</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Cost_Low__c</fullName>
        <label>Application Cost Low</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Royalty_Cost_of_Embedded_Apps__c</fullName>
        <label>Current Royalty Cost of Embedded Apps</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Royalty_Cost_of_IP_Apps__c</fullName>
        <label>Current Royalty Cost of IP Apps</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Royalty_Cost_of_Preload_Apps__c</fullName>
        <label>Current Royalty Cost of Preload Apps</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Royalty_Cost_of_Services_Apps__c</fullName>
        <label>Current Royalty Cost of Services Apps</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOT_Id__c</fullName>
        <externalId>true</externalId>
        <label>MOT Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Approved_Programs_on_Stable__c</fullName>
        <description>CAN BE REMOVED</description>
        <label>Number of Approved Programs on Stable</label>
        <summaryFilterItems>
            <field>Stable_Program__c.Program_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Stable_Program__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Apps_on_Stable__c</fullName>
        <label>Number of Apps on Stable_old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Baseline_Programs__c</fullName>
        <label>Number of Baseline Programs</label>
        <summaryFilterItems>
            <field>Stable_Program__c.Program_Type__c</field>
            <operation>equals</operation>
            <value>Baseline</value>
        </summaryFilterItems>
        <summaryForeignKey>Stable_Program__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Delta_Programs__c</fullName>
        <label>Number of Delta Programs</label>
        <summaryFilterItems>
            <field>Stable_Program__c.Program_Type__c</field>
            <operation>equals</operation>
            <value>Delta</value>
        </summaryFilterItems>
        <summaryForeignKey>Stable_Program__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Embedded_Apps__c</fullName>
        <label>Number of Embedded Apps</label>
        <summaryFilterItems>
            <field>Stable_Application__c.Application_Type__c</field>
            <operation>equals</operation>
            <value>Embedded</value>
        </summaryFilterItems>
        <summaryForeignKey>Stable_Application__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_IP_Apps__c</fullName>
        <label>Number of IP Apps</label>
        <summaryFilterItems>
            <field>Stable_Application__c.Application_Type__c</field>
            <operation>equals</operation>
            <value>IP Settlement</value>
        </summaryFilterItems>
        <summaryForeignKey>Stable_Application__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Other_Apps__c</fullName>
        <label>Number of Other Apps</label>
        <summaryFilterItems>
            <field>Stable_Application__c.Application_Type__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Stable_Application__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Preload_Apps__c</fullName>
        <label>Number of Preload Apps</label>
        <summaryFilterItems>
            <field>Stable_Application__c.Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </summaryFilterItems>
        <summaryForeignKey>Stable_Application__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Programs_on_Stable__c</fullName>
        <description>CAN BE REMOVED</description>
        <label>Number of Programs on Stable</label>
        <summaryForeignKey>Stable_Program__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Services_Apps__c</fullName>
        <label>Number of Services Apps</label>
        <summaryFilterItems>
            <field>Stable_Application__c.Application_Type__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </summaryFilterItems>
        <summaryForeignKey>Stable_Application__c.Stable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reviewed_Approved__c</fullName>
        <inlineHelpText>Product Management in conjunction with Partnership Management</inlineHelpText>
        <label>Reviewed &amp; Approved</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Reviewed_Approved__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>